# wamr-embed

./: .gitmodules  CMakeLists.txt
realloc_issue/: CMakeLists.txt  README.md
realloc_issue/app/: CMakeLists.txt  main.cpp
realloc_issue/script/: CMakeLists.txt  script.cpp
wamr/: CMakeLists.txt
